tests/typing/bad/testfile-for-2.jl
for i = true : 5
	println("yolo")
end
